CHANGES.txt - 10/28/2004
------------------------

CHANGES IN CUPS V1.1.22

	- Now allow 0-length reads in the CUPS file API (STR
	  #985)
	- cupsDoFileRequest() now sets cupsLastError() to
	  IPP_ERROR on network errors (STR #953)
	- The pdftops filter didn't scale small pages up to the
	  output page size when the fitplot option was used (STR
	  #984)
	- Fixed the ipptest program usage message (STR #959)
	- Added Spanish man pages (STR #963)
	- Fixed the order of comparisons in the client.conf
	  reading code (STR #971)
	- cupsLangGet() incorrectly set the current locale (STR
	  #970)


CHANGES IN CUPS V1.1.22rc2

	- The pdftops filter didn't check the range of all
	  integer attributes (STR #972)
	- Documentation corrections (STR #944, STR #946)
	- Also sanitize device URI in argv[0] (STR #933)
	- cupsRasterReadHeader() didn't swap bytes for the
	  numeric fields properly (STR #930)


CHANGES IN CUPS V1.1.22rc1

	- Now sanitize the device URI that is reported in the
	  error_log file (STR #920)
	- Fixed some memory and file descriptor leaks in the job
	  dispatch code (STR #921)
	- Deleting a printer could cause a crash with browsing
	  enabled (STR #865, STR #881, STR #928)
	- Browsing would turn off if the scheduler got an EAGAIN
	  error (STR #924)
	- The mime.types file didn't recognize PostScript as a
	  PJL language name (STR #925)


CHANGES IN CUPS V1.1.21

	- The scheduler did not separate Digest authentication
	  parameters with commas (STR #882)
	- Fixed some problems with image printing to custom page
	  sizes (STR #891)
	- Removed the remaining scheduler code that did not use
	  the "close-on-exec" file descriptor flag to speed up
	  program invocations (STR #890)
	- The "lpr -r" command removed the print file even if it
	  was not printed. It now only removes the file if the
	  job is successfully created (STR #886)
	- Revamped the custom page size orientation fix (STR
	  #127)
	- The lp, lpq, lpr, and lpstat commands now report when