@@ -1,5 +1,5 @@
 #
-# "$Id: cups.spec,v 1.81 2004/10/13 21:08:18 mike Exp $"
+# "$Id: cups.spec,v 1.82 2004/10/29 13:43:10 mike Exp $"
 #
 #   RPM "spec" file for the Common UNIX Printing System (CUPS).
 #
@@ -26,7 +26,7 @@
 
 Summary: Common Unix Printing System
 Name: cups
-Version: 1.1.22rc2
+Version: 1.1.22
 Release: 1
 Copyright: GPL
 Group: System Environment/Daemons
@@ -253,5 +253,5 @@ rm -rf $RPM_BUILD_ROOT
 /usr/lib/*.so*
 
 #
-# End of "$Id: cups.spec,v 1.81 2004/10/13 21:08:18 mike Exp $".
+# End of "$Id: cups.spec,v 1.82 2004/10/29 13:43:10 mike Exp $".
 #
