@@ -1,5 +1,5 @@
 .\"
-.\" "$Id: lpstat.man,v 1.11 2004/08/11 13:48:15 mike Exp $"
+.\" "$Id: lpstat.man,v 1.12 2004/10/29 13:43:10 mike Exp $"
 .\"
 .\"   lpstat man page for the Common UNIX Printing System (CUPS).
 .\"
@@ -97,7 +97,7 @@ Shows the ranking of print jobs.
 Shows a status summary, including the default destination, a
 list of classes and their member printers, and a list of printers and
 their associated devices. This is equivalent to using the "-d", "-c",
-and "-p" options.
+and "-v" options.
 .TP 5
 \-t
 .br
@@ -136,5 +136,5 @@ http://localhost:631/documentation.html
 .SH COPYRIGHT
 Copyright 1993-2004 by Easy Software Products, All Rights Reserved.
 .\"
-.\" End of "$Id: lpstat.man,v 1.11 2004/08/11 13:48:15 mike Exp $".
+.\" End of "$Id: lpstat.man,v 1.12 2004/10/29 13:43:10 mike Exp $".
 .\"
